# winproc-tui

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  metrics.md  release-workflow.md
scripts/: package-release.ps1
src/: cli.rs  config.rs  main.rs  platform.rs
src/app/: actions.rs  clipboard.rs  export.rs  logs.rs  mod.rs  navigation.rs  path_completion.rs  state.rs
src/model/: columns.rs  history.rs  mod.rs  process.rs  snapshot.rs  system.rs
src/samplers/: counters.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  open_files.rs  pdh.rs  process.rs  process_info.rs
src/ui/: column_picker.rs  cpu_panel.rs  details_panel.rs  footer.rs  format.rs  graph_slot.rs  header.rs  help.rs  layout.rs  log_list.rs  mod.rs  open_files.rs  process_info_dialog.rs  process_kill_confirm.rs  process_table.rs  quit_confirm.rs  recording_dialog.rs  settings_dialog.rs  system_panel.rs  theme.rs  tracked_remove_confirm.rs
src/ui/widgets/: block.rs  confirm_dialog.rs  mod.rs  scrollable_modal.rs
