[package]
name = "winproc-tui"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "TUI process investigation tool for Windows 11 x64: per-process memory, handles, GUI/GPU resources, I/O, A/B comparison, and JSON Lines recording with Playback."
license = "MIT"
repository = "https://github.com/TX230/winproc-tui"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", default-features = false }
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39"
toml = "1.1"
winapi = { version = "0.3.9", features = ["consoleapi", "dxgi", "errhandlingapi", "fileapi", "handleapi", "pdh", "processthreadsapi", "psapi", "sysinfoapi", "tlhelp32", "unknwnbase", "wincon", "winerror", "winnt", "winreg", "winuser", "winver", "wow64apiset"] }

[build-dependencies]
winresource = "0.1.31"
